Fixed uncovered card

--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,12 @@ footer{
 }
 
 
-.tram:hover{
+/* .tram:hover{
     background-image: url('./noun_Tram_3134750.png');
     background-size: contain;
     background-repeat: no-repeat;
 
-}
+} */
 
 .tractor:hover{
     background-image: url('./noun_Tractor_3134797.png');
@@ -120,6 +120,12 @@ footer{
     background-image: url('./noun_Cruise_Ship_3134824.png');
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.tram{
+    background-image: url('./noun_Tram_3134750.png');
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .cruiseship{
